All update methods fixed and removed unnecessary columns
